update lora load config

--- a/crates/kairei-cli/Cargo.toml
+++ b/crates/kairei-cli/Cargo.toml
@@ -13,6 +13,8 @@ clap = { version = "4", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 thiserror = "1"
 rustyline = "14"
+toml = "0.8"
+serde = { version = "1", features = ["derive"] }
 
 [features]
 default = []
