--- a/crates/kairei-cli/Cargo.toml
+++ b/crates/kairei-cli/Cargo.toml
@@ -15,6 +15,7 @@ thiserror = "1"
 rustyline = "14"
 toml = "0.8"
 serde = { version = "1", features = ["derive"] }
+chrono = { version = "0.4", features = ["serde"] }
 
 [features]
 default = []
