--- a/crates/kairei/Cargo.toml
+++ b/crates/kairei/Cargo.toml
@@ -13,6 +13,7 @@ kairei-candle = { path = "../kairei-candle", optional = true }
 async-trait = "0.1"
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
+thiserror = "2.0.12"
 
 [features]
 default = []
